syntax = "proto3";

package proto.cm.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/campaign-manager/src/proto/cm/v1;protocmv1";

message PingRequest {}

message PingResponse {
  string message = 1;
}

message NewProjectRequest {
  string project_name = 1;
  string csv_file_path = 2;
}

message NewProjectResponse {
  optional uint64 project_id = 1;
}

message GetSettingsRequest {}

message GetSettingsResponse {
  string working_dir = 1;
  string lsf_username = 2;
  string lsf_password = 3;
}

message SetSettingsRequest {
  string working_dir = 1;
  string lsf_username = 2;
  string lsf_password = 3;
}

message SetSettingsResponse {}

message Job {
  string command = 1;
  repeated string ex_hosts = 2;
  string from_host = 3;
  string job_id = 4;
  string job_name = 5;
  string job_status = 6;
  string queue = 7;
  google.protobuf.Timestamp submit_time = 8;
  string user = 9;
}

message GetLsfJobsRequest {}

message GetLsfJobsResponse {
  repeated  Job jobs = 1;
}

service CampaignManagerService {
  rpc Ping(PingRequest) returns (PingResponse) {}

  rpc NewProject(NewProjectRequest) returns (NewProjectResponse) {}

  rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse) {}
  rpc SetSettings(SetSettingsRequest) returns (SetSettingsResponse) {}

  rpc GetLsfJobs(GetLsfJobsRequest) returns (GetLsfJobsResponse) {}
}